# Wildflows

./: .gitignore  README.md  pyproject.toml
docs/: DASHBOARD.md  DESIGN.md  PLANNER-RIG.md  RIGS.md
docs/issues/: 2026-07-15-frame-call-join-timeout-crash.md  2026-07-15-relaunch-cold-start.md  2026-07-15-resume-selfcommit-deadlock.md  2026-07-15-stop-leaks-worker-trees.md
docs/proposals/: 2026-07-16-dispatch-economy-defaults.md  2026-07-16-worktree-gates-dispositions.md
examples/: rigs.yaml
examples/dashboard-fixture/: README.md
examples/toy-run/: README.md  job.md  rigs.yaml
rigs/: _pin_backend.sh  planner-picodex.sh  worker-local.sh  worker-picodex.sh
tests/: conftest.py  test_adapters.py  test_admission.py  test_ask_notify.py  test_attempt_self_time.py  test_branch_ownership.py  test_call_refused.py  test_child_launch_symmetry.py  test_cli.py  test_combine.py  test_concurrency.py  test_crash_resume.py  test_dashboard.py  test_dashboard_compat.py  test_dashboard_sse.py  test_dispatch_kinds.py  test_dispatch_rigs.py  test_engine.py  test_expr.py  test_failed_child_retry.py  test_frame_call_join.py  test_frame_commit_symlinks.py  test_frame_relaunch_guard.py  test_frames.py  test_gate_timers.py  test_integration_temp_refs.py  test_journal.py  test_journal_durability.py  test_lifecycle_lock.py  test_local_rig.py  test_mcp.py  test_parallel.py  test_projection_equivalence.py  test_projection_locking.py  test_raze.py  test_resume.py  test_review_fixes.py  test_review_fixes_pass10.py  test_review_fixes_pass11.py  test_review_fixes_pass12.py  (+22 more)
wildflows/: __main__.py  admission.py  engine.py  events.py  expr.py  frame.py  journal.py  mcp.py  planner.py  projection.py  result.py  rig.py  rigconfig.py  run.py  scheduler.py  shim.py  skill.py  workspace.py
wildflows/dashboard/: __init__.py  (+4 more)
(+23 files in other folders)
