[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wildflows"
version = "0.0.1"
description = "Better dynamic workflows: multi-harness, long-running, worktrees, journalling. Open source agent workflows."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["agent workflows", "orchestrator", "llm", "worktrees", "journalling"]
dependencies = ["pydantic>=2.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.8", "types-PyYAML>=6.0"]

[tool.setuptools.packages.find]
include = ["wildflows*"]

[tool.setuptools.package-data]
wildflows = ["macros/*.json"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["wildflows", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
