[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wildflows"
version = "0.0.1"
description = "Durable call stacks for resident coding agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Shubham Yadav"}]
license = {file = "LICENSE"}
keywords = ["agent workflows", "orchestrator", "llm", "worktrees", "journalling"]
dependencies = ["pydantic>=2.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dash = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]
dev = [
    "pytest>=8", "mypy>=1.8", "types-PyYAML>=6.0",
    "fastapi>=0.115,<1", "uvicorn>=0.30,<1", "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
include = ["wildflows*"]

[tool.setuptools.package-data]
wildflows = ["skills/*.md", "dashboard/static/*"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["wildflows", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
